# pipeline

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile  README.md  SECURITY.md  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  container-cleanup.yml  container.yml  release.yml  scorecard.yml  test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_import_atp.rs
sbom/: build-pipeline-sbom.sh  build_diffed_places_pipeline_sbom.sh  build_sbom.sh  build_tippecanoe_sbom.sh  cbom.cdx.json  merge_sbom.sh
src/: coverage.rs  diff_places.rs  import_atp.rs  import_osm.rs  lib.rs  main.rs  u64_table.rs  upload.rs
src/atp/: fetch.rs  mod.rs
src/matchers/: mod.rs  poi_matcher.rs
src/osm/: assemble.rs  cover.rs  fetch.rs  filter.rs  mod.rs
src/pipeline/: mod.rs
src/pipeline/conflate/: mod.rs
src/place/: mod.rs  s2_row_group_index.rs  writer.rs
src/places/: matcher.rs  mod.rs  place_index.rs  place_iter.rs  writer.rs
tests/: import_atp_test.rs  integration_test.rs
tests/test_data/: alltheplaces.coverage  alltheplaces.parquet  zugerland.osm.pbf
tests/test_data/places/: multi_row_groups.parquet
