[package]
name = "diffed-places"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
arrow = { version = "57.3.0", default-features = false }
clap = { version = "4.5.57", default-features = false, features = ["derive", "std"] }
deepsize = "0.2.0"
deepsize_derive = "0.1.2"
env_logger = { version = "0.11.8", default-features = false }
ext-sort = { version = "0.1.5", features = ["memory-limit"] }
geo = "0.32.0"
geo-traits = { version = "0.3.0", default-features = false }
geo-types = "0.7.18"
geojson = "0.24.2"
indicatif = { version = "0.18.3", default-features = false }
log = { version = "0.4.29", default-features = false }
memmap2 = "0.9.9"
osm_pbf_iter = { version = "0.2.1", default-features = false }
parquet = { version = "57.3.0", default-features = false, features = ["arrow", "zstd"] }
piz = "0.5.1"
protobuf_iter = { version = "0.1.3", default-features = false }
rayon = "1.11.0"
regex = "1.12.3"
s2 = "0.0.13"
serde = "1.0.228"
serde_json = "1.0.148"
tempfile = "3.24.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
