[package]
name = "diffed-places-pipeline"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow = { version = "58.0.0", default-features = false }
aws-lc-rs = { version = "1.16.1", default-features = false }
clap = { version = "4.6.0", default-features = false, features = ["derive", "std"] }
deepsize = "0.2.0"
deepsize_derive = "0.1.2"
env_logger = { version = "0.11.9", default-features = false }
ext-sort = { version = "0.1.5", features = ["memory-limit"] }
futures-util = { version = "0.3.32", default-features = false }
geo = "0.32.0"
geo-traits = { version = "0.3.0", default-features = false }
geojson = "1.0.0"
indicatif = { version = "0.18.4", default-features = false }
librqbit = { version = "8.1.1", default-features = false, features = ["disable-upload", "rust-tls"] }
log = { version = "0.4.29", default-features = false }
memmap2 = "0.9.10"
osm_pbf_iter = { version = "0.2.2", default-features = false }
parquet = { version = "58.0.0", default-features = false, features = ["arrow", "zstd"] }
piz = "0.5.1"
protobuf_iter = { version = "0.1.3", default-features = false }
rayon = "1.11.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
rmp-serde = { version = "1.3.1", default-features = false }
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs"] }
s2 = "0.0.13"
serde = "1.0.228"
serde_json = "1.0.148"
tempfile = "3.27.0"
tokio = { version = "1.50.0", default-features = false }
webpki-roots = "1.0.6"

[dev-dependencies]
assert_cmd = "2.2.0"
mockito = { version = "1.7.2", default-features = false }
predicates = "3.1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
