[package]
name = "osm-diffs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
osm-diffs = { path = ".." }
libfuzzer-sys = "0.4"


[[bin]]
name = "fuzz_import_atp"
path = "fuzz_targets/fuzz_import_atp.rs"
test = false
doc = false
bench = false
